# commandrunner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh
lib/: CMakeLists.txt
src/: .clangd  .gitignore  CMakeLists.txt  command_runner.cc  command_runner.desktop  command_runner.h  dbuild.sh  jsoncpp.cpp  main.cc  second_window.cc  second_window.h  style.css
src/json/: json-forwards.h  json.h
