cmake_minimum_required(VERSION 3.16.3)
project(Command_Runner VERSION 1.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
find_package(PkgConfig)
pkg_check_modules(GTKMM gtkmm-3.0)

include_directories(.)
include_directories(${GTKMM_INCLUDE_DIRS})
set(CMAKE_INCLUDE_CURRENT_DIR "ON")
add_executable(${PROJECT_NAME} main.cc command_runner.cc second_window.cc jsoncpp.cpp)
target_link_libraries(${CMAKE_PROJECT_NAME} ${GTKMM_LIBRARIES} -lfontconfig)
install(TARGETS Command_Runner RUNTIME DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/command_runner.png DESTINATION share/icons)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/command_runner.desktop DESTINATION share/applications)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/style.css DESTINATION share/styles)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../LICENSE.md DESTINATION .././)
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Skvh")
set(CPACK_BINARY_DEB "ON")
set(CPACK_GENERATOR "TGZ;DEB")
set(CPACK_DEFAULT_PACKAGE_DESCRIPTION_SUMMARY "A gtk application for running and saving commands from a nice GUI.")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A gtk application for running and saving commands from a nice GUI")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "gnome-terminal")
include(CPack)
